--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #000000;
+        background-color: #003057;
         color: #ffffff;
         scroll-behavior: smooth;
         -webkit-font-smoothing: antialiased;
@@ -35,8 +35,8 @@
         border: 1px solid rgba(255, 255, 255, 0.05);
       }
       ::selection {
-        background-color: #ffffff;
-        color: #000000;
+        background-color: #A4925A;
+        color: #FFFFFF;
       }
     </style>
   <script type="importmap">
