--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #003057;
-        color: #ffffff;
+        background-color: #D6DBD4;
+        color: #003057;
         scroll-behavior: smooth;
         -webkit-font-smoothing: antialiased;
       }
@@ -24,15 +24,15 @@
       .athos-noise {
         position: fixed;
         top: 0; left: 0; width: 100%; height: 100%;
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3ExternalLink %3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-        opacity: 0.03;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        opacity: 0.05;
         pointer-events: none;
         z-index: 9999;
       }
       .glass {
-        background: rgba(255, 255, 255, 0.02);
+        background: rgba(255, 255, 255, 0.4);
         backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.05);
+        border: 1px solid rgba(0, 48, 87, 0.1);
       }
       ::selection {
         background-color: #A4925A;
